unpackaged/main/default/objects/Lead/fields/Agence_depart_retour__c.field-meta.xml
<CustomField>
    <fullName>Agence_depart_retour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agence départ et retour pour Web to lead</description>
    <label>Agence départ et retour</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pistes (Agence départ et retour)</relationshipLabel>
    <relationshipName>Pistes1</relationshipName>
    <type>Lookup</type>
</CustomField>