unpackaged/main/default/objects/Lead/fields/Agence_PF__c.field-meta.xml
<CustomField>
    <fullName>Agence_PF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence PF</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pistes</relationshipLabel>
    <relationshipName>Pistes</relationshipName>
    <type>Lookup</type>
</CustomField>