unpackaged/main/default/objects/Lead/fields/API_Connector__Account_duplicate_match_date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Account_duplicate_match_date__c</fullName>
    <label>Account duplicate match date</label>
    <type>Date</type>
</CustomField>