unpackaged/main/default/objects/Lead/fields/API_Connector__Account_Match__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Account_Match__c</fullName>
    <label>Account Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Matched</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>