unpackaged/main/default/objects/Lead/fields/API_Connector__Account_Match_Error__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Account_Match_Error__c</fullName>
    <description>If during callout any error occurs. Error will be saved in this field</description>
    <label>Account Match Error</label>
    <type>TextArea</type>
</CustomField>