unpackaged/main/default/objects/Lead/fields/API_Connector__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>