unpackaged/main/default/objects/Lead/fields/API_Connector__Contact_duplicate_match_date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Contact_duplicate_match_date__c</fullName>
    <label>Contact Duplicate Match Date</label>
    <type>Date</type>
</CustomField>