unpackaged/main/default/objects/Lead/fields/API_Connector__Contact_Match_Error__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Contact_Match_Error__c</fullName>
    <label>Contact Match Error</label>
    <type>TextArea</type>
</CustomField>