unpackaged/main/default/objects/Lead/fields/API_Connector__Global_Match_Log__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Global_Match_Log__c</fullName>
    <label>Global Match Log</label>
    <type>TextArea</type>
</CustomField>