unpackaged/main/default/objects/Lead/fields/API_Connector__Global_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Global_Match_Status__c</fullName>
    <label>Global Match Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>