unpackaged/main/default/objects/Lead/fields/API_Connector__KvK_match_error__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__KvK_match_error__c</fullName>
    <label>KvK Match Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>