unpackaged/main/default/objects/Lead/fields/API_Connector__KvK_match_status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__KvK_match_status__c</fullName>
    <label>KvK Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Not matched</fullName>
                <label>Not Matched</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>