unpackaged/main/default/objects/Lead/fields/Attente_Client__c.field-meta.xml
<CustomField>
    <fullName>Attente_Client__c</fullName>
    <label>Attente Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande de rappel</fullName>
            </value>
            <value>
                <fullName>Demande de devis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>