unpackaged/main/default/objects/Lead/fields/BayPass_Lead_ValidationRule__c.field-meta.xml
<CustomField>
    <fullName>BayPass_Lead_ValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BayPass Lead ValidationRule</label>
    <type>Checkbox</type>
</CustomField>