unpackaged/main/default/objects/Lead/fields/Besoin__c.field-meta.xml
<CustomField>
    <fullName>Besoin__c</fullName>
    <label>Besoin</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>