unpackaged/main/default/objects/Lead/fields/CA_estime__c.field-meta.xml
<CustomField>
    <fullName>CA_estime__c</fullName>
    <label>CA estimé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>