unpackaged/main/default/objects/Lead/fields/Client_relance__c.field-meta.xml
<CustomField>
    <fullName>Client_relance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client relancé</label>
    <type>Checkbox</type>
</CustomField>