unpackaged/main/default/objects/Lead/fields/Code_Agence__c.field-meta.xml
<CustomField>
    <fullName>Code_Agence__c</fullName>
    <description>champ spécifique pour web to lead pour la récupération du code d&#39;agence depuis le site web</description>
    <label>Code Agence site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>