unpackaged/main/default/objects/Lead/fields/Code_Agence_PF__c.field-meta.xml
<CustomField>
    <fullName>Code_Agence_PF__c</fullName>
    <description>Code agence du lookup Agence PF dans la piste</description>
    <formula>Agence_PF__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Agence PF</label>
    <type>Text</type>
</CustomField>