unpackaged/main/default/objects/Lead/fields/Code_prospect_Igloo__c.field-meta.xml
<CustomField>
    <fullName>Code_prospect_Igloo__c</fullName>
    <label>Code prospect Igloo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>