unpackaged/main/default/objects/Lead/fields/CodePostal__c.field-meta.xml
<CustomField>
    <fullName>CodePostal__c</fullName>
    <label>- Code Postal -</label>
    <length>20</length>
    <type>Text</type>
</CustomField>