unpackaged/main/default/objects/Lead/fields/Data_Transfer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Data_Transfer_Consent__c</fullName>
    <label>Data Transfer Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>