unpackaged/main/default/objects/Lead/fields/Date_de_planification_dactivite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_planification_dactivite__c</fullName>
    <label>Date de planification d&#39;activité</label>
    <type>DateTime</type>
</CustomField>