unpackaged/main/default/objects/Lead/fields/Date_heure_affectation__c.field-meta.xml
<CustomField>
    <fullName>Date_heure_affectation__c</fullName>
    <label>Date / heure affectation</label>
    <type>DateTime</type>
</CustomField>