unpackaged/main/default/objects/Lead/fields/Date_Heure_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Creation__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Heure Création</label>
    <type>DateTime</type>
</CustomField>