unpackaged/main/default/objects/Lead/fields/Date_Heure_qualification__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_qualification__c</fullName>
    <description>Date/Heure qualification de la piste</description>
    <label>Date/Heure qualification</label>
    <type>DateTime</type>
</CustomField>