unpackaged/main/default/objects/Lead/fields/Date_prochain_contact__c.field-meta.xml
<CustomField>
    <fullName>Date_prochain_contact__c</fullName>
    <label>Date prochain contact</label>
    <type>Date</type>
</CustomField>