unpackaged/main/default/objects/Lead/fields/DateTime_fin__c.field-meta.xml
<CustomField>
    <fullName>DateTime_fin__c</fullName>
    <formula>DATETIMEVALUE(Date_de_fin_de_location__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateTime fin</label>
    <type>DateTime</type>
</CustomField>