unpackaged/main/default/objects/Lead/fields/Days_After_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Pickup_Date__c</fullName>
    <description>Champ fait pour calculer si la Date début de location a dépassé 6 semaine.
Besoin : la checkbox &quot;Réservation à confirmer&quot;.</description>
    <formula>IF(ISNULL( Pick_up_Date__c ),50, Pick_up_Date__c - NOW() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days After Pickup Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>