unpackaged/main/default/objects/Lead/fields/Degre_d_interet__c.field-meta.xml
<CustomField>
    <fullName>Degre_d_interet__c</fullName>
    <label>Degré d&#39;intérêt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chaud</fullName>
            </value>
            <value>
                <fullName>Froid</fullName>
            </value>
            <value>
                <fullName>Déjà client</fullName>
                <isActive>false</isActive>
                <label>Déjà client</label>
            </value>
            <value>
                <fullName>Tiède</fullName>
                <isActive>false</isActive>
                <label>Tiède</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>