unpackaged/main/default/objects/Lead/fields/derniere_activite_sur_piste__c.field-meta.xml
<CustomField>
    <fullName>derniere_activite_sur_piste__c</fullName>
    <label>dernière activité sur piste</label>
    <type>DateTime</type>
</CustomField>