unpackaged/main/default/objects/Lead/fields/Devis_envoye__c.field-meta.xml
<CustomField>
    <fullName>Devis_envoye__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devis envoyé</label>
    <type>Checkbox</type>
</CustomField>