unpackaged/main/default/objects/Lead/fields/Duree_location_souhaitee__c.field-meta.xml
<CustomField>
    <fullName>Duree_location_souhaitee__c</fullName>
    <label>Durée location souhaitée</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 à 30 jours</fullName>
            </value>
            <value>
                <fullName>1 à 11 mois</fullName>
            </value>
            <value>
                <fullName>Longue durée</fullName>
            </value>
            <value>
                <fullName>De 1 à 25 jours</fullName>
            </value>
            <value>
                <fullName>De 1 à 12 mois</fullName>
            </value>
            <value>
                <fullName>Plus de 12 mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>