unpackaged/main/default/objects/Lead/fields/En_attente_retour_agence__c.field-meta.xml
<CustomField>
    <fullName>En_attente_retour_agence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En attente retour agence</label>
    <type>Checkbox</type>
</CustomField>