unpackaged/main/default/objects/Lead/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achats</fullName>
            </value>
            <value>
                <fullName>Administration / Secrétariat</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Comptabilité / Finance</fullName>
            </value>
            <value>
                <fullName>Informatique</fullName>
            </value>
            <value>
                <fullName>Juridique</fullName>
            </value>
            <value>
                <fullName>Logistique / Exploitation</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Ressource Humaines</fullName>
            </value>
            <value>
                <fullName>Services Généraux / Immobilier</fullName>
            </value>
            <value>
                <fullName>Technique</fullName>
            </value>
            <value>
                <fullName>- Séléctionner -</fullName>
                <isActive>false</isActive>
                <label>- Séléctionner -</label>
            </value>
            <value>
                <fullName>Chef de projet digital senior</fullName>
                <isActive>false</isActive>
                <label>Chef de projet digital senior</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>