unpackaged/main/default/objects/Lead/fields/Gagnee__c.field-meta.xml
<CustomField>
    <fullName>Gagnee__c</fullName>
    <formula>if( text(Status) =&#39;Gagnée&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gagnée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>