unpackaged/main/default/objects/Lead/fields/Gamme__c.field-meta.xml
<CustomField>
    <fullName>Gamme__c</fullName>
    <label>Gamme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sec</fullName>
            </value>
            <value>
                <fullName>Froid</fullName>
            </value>
            <value>
                <fullName>Hygiène</fullName>
            </value>
            <value>
                <fullName>Brasseurs</fullName>
            </value>
            <value>
                <fullName>Environnement</fullName>
            </value>
            <value>
                <fullName>Higyène</fullName>
                <isActive>false</isActive>
                <label>Higyène</label>
            </value>
            <value>
                <fullName>brasseur</fullName>
                <isActive>false</isActive>
                <label>brasseur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>