unpackaged/main/default/objects/Lead/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Civilité.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M.</fullName>
            </value>
            <value>
                <fullName>Mme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>