unpackaged/main/default/objects/Lead/fields/Groupement__c.field-meta.xml
<CustomField>
    <fullName>Groupement__c</fullName>
    <label>Groupement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>