unpackaged/main/default/objects/Lead/fields/Heures_rappel_souhaitees__c.field-meta.xml
<CustomField>
    <fullName>Heures_rappel_souhaitees__c</fullName>
    <label>Heures rappel souhaitées</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin : entre 08h00 et 12h30</fullName>
            </value>
            <value>
                <fullName>Après-midi : entre 12h30 et 18h</fullName>
            </value>
            <value>
                <fullName>Le matin</fullName>
            </value>
            <value>
                <fullName>L’après-midi</fullName>
            </value>
            <value>
                <fullName>La journée</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
                <isActive>false</isActive>
                <label>Afternoon</label>
            </value>
            <value>
                <fullName>Al mattino</fullName>
                <isActive>false</isActive>
                <label>Al mattino</label>
            </value>
            <value>
                <fullName>Any time of day</fullName>
                <isActive>false</isActive>
                <label>Any time of day</label>
            </value>
            <value>
                <fullName>De manhã</fullName>
                <isActive>false</isActive>
                <label>De manhã</label>
            </value>
            <value>
                <fullName>Di pomeriggio</fullName>
                <isActive>false</isActive>
                <label>Di pomeriggio</label>
            </value>
            <value>
                <fullName>Délelőtt</fullName>
                <isActive>false</isActive>
                <label>Délelőtt</label>
            </value>
            <value>
                <fullName>In giornata</fullName>
                <isActive>false</isActive>
                <label>In giornata</label>
            </value>
            <value>
                <fullName>Mañana</fullName>
                <isActive>false</isActive>
                <label>Mañana</label>
            </value>
            <value>
                <fullName>Middag</fullName>
                <isActive>false</isActive>
                <label>Middag</label>
            </value>
            <value>
                <fullName>Morgens</fullName>
                <isActive>false</isActive>
                <label>Morgens</label>
            </value>
            <value>
                <fullName>Morning</fullName>
                <isActive>false</isActive>
                <label>Morning</label>
            </value>
            <value>
                <fullName>Nachmittags</fullName>
                <isActive>false</isActive>
                <label>Nachmittags</label>
            </value>
            <value>
                <fullName>Ochtend</fullName>
                <isActive>false</isActive>
                <label>Ochtend</label>
            </value>
            <value>
                <fullName>Odpoledne</fullName>
                <isActive>false</isActive>
                <label>Odpoledne</label>
            </value>
            <value>
                <fullName>Overdag</fullName>
                <isActive>false</isActive>
                <label>Overdag</label>
            </value>
            <value>
                <fullName>Popołudnie</fullName>
                <isActive>false</isActive>
                <label>Popołudnie</label>
            </value>
            <value>
                <fullName>Přes den</fullName>
                <isActive>false</isActive>
                <label>Přes den</label>
            </value>
            <value>
                <fullName>Rano</fullName>
                <isActive>false</isActive>
                <label>Rano</label>
            </value>
            <value>
                <fullName>Ráno</fullName>
                <isActive>false</isActive>
                <label>Ráno</label>
            </value>
            <value>
                <fullName>Tagsüber</fullName>
                <isActive>false</isActive>
                <label>Tagsüber</label>
            </value>
            <value>
                <fullName>Tarde</fullName>
                <isActive>false</isActive>
                <label>Tarde</label>
            </value>
            <value>
                <fullName>Todo el día</fullName>
                <isActive>false</isActive>
                <label>Todo el día</label>
            </value>
            <value>
                <fullName>Todo o dia</fullName>
                <isActive>false</isActive>
                <label>Todo o dia</label>
            </value>
            <value>
                <fullName>W ciągu dnia</fullName>
                <isActive>false</isActive>
                <label>W ciągu dnia</label>
            </value>
            <value>
                <fullName>À tarde</fullName>
                <isActive>false</isActive>
                <label>À tarde</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>