unpackaged/main/default/objects/Lead/fields/Identification_faux_professionnel__c.field-meta.xml
<CustomField>
    <fullName>Identification_faux_professionnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identification faux professionnel</label>
    <type>Checkbox</type>
</CustomField>