unpackaged/main/default/objects/Lead/fields/Interets__c.field-meta.xml
<CustomField>
    <fullName>Interets__c</fullName>
    <label>Intérêts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Télématique</fullName>
            </value>
            <value>
                <fullName>RSE</fullName>
            </value>
            <value>
                <fullName>Energies alternatives</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>