unpackaged/main/default/objects/Lead/fields/IsCoolEnergiesWebsite__c.field-meta.xml
<CustomField>
    <fullName>IsCoolEnergiesWebsite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox dédié au site CoolEnergies pour le webtolead</description>
    <label>IsCoolEnergiesWebsite</label>
    <type>Checkbox</type>
</CustomField>