unpackaged/main/default/objects/Lead/fields/IsPFWebsite__c.field-meta.xml
<CustomField>
    <fullName>IsPFWebsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPFWebsite</label>
    <type>Checkbox</type>
</CustomField>