unpackaged/main/default/objects/Lead/fields/Lead_owner_alerte__c.field-meta.xml
<CustomField>
    <fullName>Lead_owner_alerte__c</fullName>
    <formula>if (  

AND(
Datevalue(Date_Heure_Creation__c)+3  ==  today() ,
 text(Status) == &#39;Créée&#39;
)


, true, false)</formula>
    <label>Lead owner alerte</label>
    <type>Checkbox</type>
</CustomField>