unpackaged/main/default/objects/Lead/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <label>Lease Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From 1 to 30 days</fullName>
            </value>
            <value>
                <fullName>From 1 to 11 months</fullName>
            </value>
            <value>
                <fullName>Long term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>