unpackaged/main/default/objects/Lead/fields/Lieu_de_levenement__c.field-meta.xml
<CustomField>
    <fullName>Lieu_de_levenement__c</fullName>
    <description>Lieu de l&#39;événement (pour les salons &amp; l&#39;événementiel)</description>
    <label>Lieu de l&#39;évènement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>