unpackaged/main/default/objects/Lead/fields/Marchandise_transportee__c.field-meta.xml
<CustomField>
    <fullName>Marchandise_transportee__c</fullName>
    <label>Marchandise transportée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produits frais</fullName>
            </value>
            <value>
                <fullName>Produits surgelés</fullName>
            </value>
            <value>
                <fullName>Produits frais et surgelés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>