unpackaged/main/default/objects/Lead/fields/Mode_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_contact__c</fullName>
    <label>Mode de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Rendez-vous</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>