unpackaged/main/default/objects/Lead/fields/Nom_de_loperation__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_loperation__c</fullName>
    <label>Nom de l&#39;opération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>